VERSION 5.0.7-beta-4
====================

* ADDED: Experimental document-rendering classes (undocumented):
  hbox, lbox, tbox, grbox, parbox and rubber.

* ISO: Avoid instantiation errors on =../2; replace concat/3 using
  atom_concat/3 and deal with syntax errors in PceEmacs
  pce_insert_require_directive and friends.

* FIXED: Font metrics error (X11 version).

* ADDED: Symbol font to standard font list and `symbol' font alias.  See
  FontViewer demo.

* FIXED: `editor->cut' to ensure the selection is cleared after cutting.
  Reported by Peter Mott.

* ADDED: Class chain_hyper to express mutual dependent objects.

* FIXED: Removed limits on # rows/columns of devices with a format object
  attached (used to be 1024x1024).

VERSION 5.0.7-beta-3
====================

* ADDED: Class variable text_item.combo_box_heigth to define the maximum
  height of completer/combox box windows (default 6).

* FIXED: Sometimes wrong assumption of control-key in XPCE editors (notably
  after incremental search.

* FIXED: `@pce->console_label' to deal with renamed console.dll --> plterm.dll

* FIXED: `image->draw_in' for selected graphicals.  Reported by Frank
  Cornelissen.

* FIXED: `editor->sort_lines_in_region': memory handling problem (sometimes
  crached).

* FIXED: `image->save', opening file in wrong mode.  Patch by Frank
  Cornelissen.  Thanks.

* FIXED: `editor->save_buffer' caused crash if an error occurred during
  writing the file.

* FIXED: `file<-read' on Windows for not-so-large files and Unix for
  truely large files.  Also a lot faster now.  Reported by Bob Wielinga.

* FIXED: Various ISO Prolog compatibility issues.

* FIXED: Take care of module-local operator specifications.  Fixes problems
  with autoloading.

* ADDED: Generated files to the source-distribution to allow for recompiling
  under Windows.

* ADDED: --enable-mt configuration option to provide rudimentary support
  for multi-threading.  Supports pceMTLock(int lockid) and