@@ -1,3 +1,8 @@
+
+
+* FIXED: `style <-underline' and similar attributes.  Returned @on on
+  all attributes if any of the attributes was set.
+
 VERSION 5.0.7-beta-4
 ====================
 
